# airplay-rs

./: .env.example  .gitignore  Cargo.toml  build.rs  justfile
.cargo/: config.toml
scripts/: measure-gst-latency.sh
src/: airplay.rs  app.rs  discovery.rs  lib.rs  main.rs
src/video/: backend.rs  capture.rs  codec.rs  gstreamer.rs  macos.rs  mod.rs
