[package]
name = "winit-gstreamer"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.30.13", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
gstreamer = "0.25.2"
gstreamer-video = "0.25.2"
