[package]
name = "airplay-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "main"
crate-type = ["cdylib", "rlib"]

[features]
macos-gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

[dependencies]
axum = "0.8"
mdns-sd = "0.19.2"
rairplay = "1.0.0"
tokio = "1"
tracing-subscriber = "0.3"
winit = { version = "0.30.13", features = ["android-native-activity"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
gstreamer = "0.25.2"
gstreamer-app = "0.25.2"
gstreamer-video = "0.25.2"

[target.'cfg(target_os = "macos")'.dependencies]
gstreamer = { version = "0.25.2", optional = true }
gstreamer-app = { version = "0.25.2", optional = true }
gstreamer-video = { version = "0.25.2", optional = true }
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = ["NSResponder", "NSView"] }
objc2-foundation = { version = "0.2.2", features = ["NSGeometry"] }
